# dissertationCUDARayTracer

./: CMakeLists.txt  main.cpp  main.cu  readme.md
import/glad/include/glad/: glad.h
import/glad/src/: glad.c
